Make the api url the same as the client display url.
使api url 和 client url 一樣
